--- a/MyLocations/Base.lproj/Main.storyboard
+++ b/MyLocations/Base.lproj/Main.storyboard
@@ -321,24 +321,29 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="m9N-II-1jA">
-                                            <rect key="frame" x="15" y="4" width="288" height="21"/>
+                                            <rect key="frame" x="86" y="4" width="224" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Rd4-aS-uNj">
-                                            <rect key="frame" x="15" y="27" width="288" height="21"/>
+                                            <rect key="frame" x="86" y="27" width="225" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="YoH-o6-UKe">
+                                            <rect key="frame" x="6" y="2" width="52" height="52"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="addresslabel" destination="Rd4-aS-uNj" id="9jR-8h-ixA"/>
                                     <outlet property="desciptionLabel" destination="m9N-II-1jA" id="JYd-wu-8fu"/>
+                                    <outlet property="photoImageView" destination="YoH-o6-UKe" id="ShN-3A-xj8"/>
                                     <segue destination="1Eo-vs-bbL" kind="modal" identifier="EditLocation" id="ufF-PF-yXi"/>
                                 </connections>
                             </tableViewCell>
@@ -505,6 +510,6 @@
         <image name="first" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Klq-pS-lqP"/>
+        <segue reference="ufF-PF-yXi"/>
     </inferredMetricsTieBreakers>
 </document>
